java version fix